--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -124,7 +124,6 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
-  "Don't show this again": null,
   "Download": "Herunterladen",
   "Download Recent Database": null,
   "Download recent database?": null,
@@ -181,6 +180,8 @@
   "Hash Difficulty": null,
   "Help": null,
   "High": "Hoch",
+  "I have read and Accept the Agreement": null,
+  "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "IP Adresse",
   "IP address configured for manual Core.": "IP Adresse für den manuellen Daemon konfiguriert",
@@ -189,7 +190,6 @@
   "Import": "Importieren",
   "Import custom theme": "Design auswählen",
   "Import private key": "Private Key importieren",
-  "Incorrect password": "Falsches Passwort",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
@@ -207,6 +207,7 @@
   "Label (optional)": null,
   "Language": "Sprache",
   "Last updated\n%{time}": null,
+  "License Agreement": null,
   "Light": "Light",
   "Local Time": "Ortszeit",
   "Log in now": "Jetzt einloggen",
@@ -282,7 +283,6 @@
   "Not logged in": "Die Wallet ist verschlüsselt",
   "Not provided": null,
   "Notes": "Anmerkungen",
-  "OK": null,
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": null,
   "Open": "Öffnen",
   "Orphan": null,
@@ -362,6 +362,7 @@
   "Send": "Senden",
   "Send NXS": "Nexus Senden",
   "Send To multiple recipients": "An mehrere Empfänger senden",
+  "Send all": null,
   "Send anonymous usage data": "Nutzungsdaten anonym senden",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Helfen Sie den Nexus-Entwickler die Wallet stetig zu verbessern und senden Sie uns Ihre Nutzungsdaten anonym zu",
   "Send from": "Sende von",
@@ -426,7 +427,6 @@
   "Type": "Transaktionen",
   "Unknown": null,
   "Unknown login status": null,
-  "Unlock until date/time must be at least an hour in the future": "Entsperren auf eine bestimmte Dauer muss mindestens eine Stunde in der Zukunft liegen",
   "Unsupported file type": null,
   "Update available! Downloading...": null,
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": null,
@@ -441,6 +441,7 @@
   "View private key for address": "Den Private Key für diese Adresse anzeigen",
   "Visit repository": null,
   "Volume": "Volumen",
+  "Waiting for average age of balance to exceed 72 hours...": null,
   "Wallet backed up": "Wallet gesichert",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "Die Wallet wurde verschlüsselt",
@@ -448,6 +449,7 @@
   "Wallet is not staking": null,
   "Wallet is staking": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
+  "Warning": null,
   "Yes": "Ja",
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
