--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -124,7 +124,6 @@
   "Dismiss": "Dismiss",
   "Display Test Transactions on the Transactions page": "Display Test Transactions on the Transactions page",
   "Display name": "Display name",
-  "Don't show this again": "Don't show this again",
   "Download": "Download",
   "Download Recent Database": "Download Recent Database",
   "Download recent database?": "Download recent database?",
@@ -181,6 +180,8 @@
   "Hash Difficulty": "Hash Difficulty",
   "Help": "Help",
   "High": "High",
+  "I have read and Accept the Agreement": "I have read and Accept the Agreement",
+  "I understand the risk": "I understand the risk",
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.",
   "IP address": "IP address",
   "IP address configured for manual Core.": "IP address configured for manual Core.",
@@ -189,7 +190,6 @@
   "Import": "Import",
   "Import custom theme": "Import custom theme",
   "Import private key": "Import private key",
-  "Incorrect password": "Incorrect password",
   "Install Module": "Install Module",
   "Install it later": "Install it later",
   "Installing Module...": "Installing Module...",
@@ -207,6 +207,7 @@
   "Label (optional)": "Label (optional)",
   "Language": "Language",
   "Last updated\n%{time}": "Last updated\n%{time}",
+  "License Agreement": "License Agreement",
   "Light": "Light",
   "Local Time": "Local Time",
   "Log in now": "Log in now",
@@ -282,7 +283,6 @@
   "Not logged in": "Not logged in",
   "Not provided": "Not provided",
   "Notes": "Notes",
-  "OK": "OK",
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing",
   "Open": "Open",
   "Orphan": "Orphan",
@@ -362,6 +362,7 @@
   "Send": "Send",
   "Send NXS": "Send NXS",
   "Send To multiple recipients": "Send To multiple recipients",
+  "Send all": "Send all",
   "Send anonymous usage data": "Send anonymous usage data",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Send anonymous usage data to allow the Nexus developers to improve the wallet.",
   "Send from": "Send from",
@@ -426,7 +427,6 @@
   "Type": "Type",
   "Unknown": "Unknown",
   "Unknown login status": "Unknown login status",
-  "Unlock until date/time must be at least an hour in the future": "Unlock until date/time must be at least an hour in the future",
   "Unsupported file type": "Unsupported file type",
   "Update available! Downloading...": "Update available! Downloading...",
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.",
@@ -441,6 +441,7 @@
   "View private key for address": "View private key for address",
   "Visit repository": "Visit repository",
   "Volume": "Volume",
+  "Waiting for average age of balance to exceed 72 hours...": "Waiting for average age of balance to exceed 72 hours...",
   "Wallet backed up": "Wallet backed up",
   "Wallet has been backed up": "Wallet has been backed up",
   "Wallet has been encrypted.": "Wallet has been encrypted.",
@@ -448,6 +449,7 @@
   "Wallet is not staking": "Wallet is not staking",
   "Wallet is staking": "Wallet is staking",
   "Wallet will be automatically refreshed for the change to take effect": "Wallet will be automatically refreshed for the change to take effect",
+  "Warning": "Warning",
   "Yes": "Yes",
   "Yes, abort": "Yes, abort",
   "Yes, let's bootstrap it": "Yes, let's bootstrap it",
