--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -124,7 +124,6 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
-  "Don't show this again": null,
   "Download": "Télécharger",
   "Download Recent Database": null,
   "Download recent database?": null,
@@ -181,6 +180,8 @@
   "Hash Difficulty": "Difficulté Hash",
   "Help": null,
   "High": "Haut",
+  "I have read and Accept the Agreement": null,
+  "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "Adresse IP",
   "IP address configured for manual Core.": "Adresse IP configurée pour le daemon manuel",
@@ -189,7 +190,6 @@
   "Import": "Importer",
   "Import custom theme": "Importer thème personnalisé",
   "Import private key": "Importer une clé privée",
-  "Incorrect password": "Mot de passe incorrect",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
@@ -207,6 +207,7 @@
   "Label (optional)": "Étiquette (optionnel)",
   "Language": "Langue",
   "Last updated\n%{time}": null,
+  "License Agreement": null,
   "Light": "Clair",
   "Local Time": "Heure locale",
   "Log in now": "Se connecter maintenant",
@@ -282,7 +283,6 @@
   "Not logged in": "Portefeuille verrouillé",
   "Not provided": null,
   "Notes": "Notes",
-  "OK": null,
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": null,
   "Open": "Ouverture",
   "Orphan": null,
@@ -362,6 +362,7 @@
   "Send": "Envoyer",
   "Send NXS": "Envoyer NXS",
   "Send To multiple recipients": "Envoyer à plusieurs destinataires",
+  "Send all": null,
   "Send anonymous usage data": "Envoyer des données d'usage anonymes",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Envoyer des données d'utilisation anonymes pour permettre aux développeurs de Nexus d'améliorer le portefeuille",
   "Send from": "Envoyer depuis",
@@ -426,7 +427,6 @@
   "Type": "Type",
   "Unknown": "Inconnu",
   "Unknown login status": null,
-  "Unlock until date/time must be at least an hour in the future": "Déverrouiller jusqu'à ce que la date et l'heure soient au moins une heure dans le futur",
   "Unsupported file type": null,
   "Update available! Downloading...": null,
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": "Les soldes affichés ici peuvent être incorrects dans de rares cas, rebalayer vous aidera à les corriger",
@@ -441,6 +441,7 @@
   "View private key for address": "Afficher la clé privée pour l'adresse",
   "Visit repository": null,
   "Volume": "Volume",
+  "Waiting for average age of balance to exceed 72 hours...": null,
   "Wallet backed up": "Portefeuille sauvegardé",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "Le portefeuille a été chiffré",
@@ -448,6 +449,7 @@
   "Wallet is not staking": null,
   "Wallet is staking": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
+  "Warning": null,
   "Yes": "Oui",
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
