--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -124,7 +124,6 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
-  "Don't show this again": null,
   "Download": "ダウンロード",
   "Download Recent Database": null,
   "Download recent database?": null,
@@ -181,6 +180,8 @@
   "Hash Difficulty": null,
   "Help": null,
   "High": "高い",
+  "I have read and Accept the Agreement": null,
+  "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "IPアドレス",
   "IP address configured for manual Core.": "手動デーモン用に設定されたIPアドレス",
@@ -189,7 +190,6 @@
   "Import": null,
   "Import custom theme": null,
   "Import private key": "秘密鍵をインポートする",
-  "Incorrect password": null,
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
@@ -207,6 +207,7 @@
   "Label (optional)": null,
   "Language": "言語",
   "Last updated\n%{time}": null,
+  "License Agreement": null,
   "Light": null,
   "Local Time": "現地時間",
   "Log in now": null,
@@ -282,7 +283,6 @@
   "Not logged in": "ウォレットロック",
   "Not provided": null,
   "Notes": "ノート",
-  "OK": null,
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": null,
   "Open": "開いた",
   "Orphan": null,
@@ -362,6 +362,7 @@
   "Send": "送信",
   "Send NXS": "送信 NXS",
   "Send To multiple recipients": null,
+  "Send all": null,
   "Send anonymous usage data": "匿名の使用データを送信する",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "匿名の使用データを送信して、Nexus開発者がウォレットを改善できるようにする",
   "Send from": null,
@@ -426,7 +427,6 @@
   "Type": "タイプ",
   "Unknown": null,
   "Unknown login status": null,
-  "Unlock until date/time must be at least an hour in the future": "将来日付/時間が少なくとも1時間になるまでロックを解除する",
   "Unsupported file type": null,
   "Update available! Downloading...": null,
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": null,
@@ -441,6 +441,7 @@
   "View private key for address": "アドレスの秘密鍵を表示する",
   "Visit repository": null,
   "Volume": "量",
+  "Waiting for average age of balance to exceed 72 hours...": null,
   "Wallet backed up": "ウォレットのバックアップ",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "ウォレットは暗号化されています",
@@ -448,6 +449,7 @@
   "Wallet is not staking": null,
   "Wallet is staking": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
+  "Warning": null,
   "Yes": "はい",
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
