--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -124,7 +124,6 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
-  "Don't show this again": null,
   "Download": "다운로드",
   "Download Recent Database": null,
   "Download recent database?": null,
@@ -181,6 +180,8 @@
   "Hash Difficulty": null,
   "Help": null,
   "High": "높은",
+  "I have read and Accept the Agreement": null,
+  "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "IP 주소",
   "IP address configured for manual Core.": "수동 데몬 용으로 구성된 IP 주소",
@@ -189,7 +190,6 @@
   "Import": null,
   "Import custom theme": null,
   "Import private key": "개인 키 가져 오기",
-  "Incorrect password": "잘못된 비밀번호",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
@@ -207,6 +207,7 @@
   "Label (optional)": null,
   "Language": "언어",
   "Last updated\n%{time}": null,
+  "License Agreement": null,
   "Light": null,
   "Local Time": "현지 시각",
   "Log in now": null,
@@ -282,7 +283,6 @@
   "Not logged in": "월렛 잠금",
   "Not provided": null,
   "Notes": "노트",
-  "OK": null,
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": null,
   "Open": "열다",
   "Orphan": null,
@@ -362,6 +362,7 @@
   "Send": "보내다",
   "Send NXS": "NXS 보내기",
   "Send To multiple recipients": null,
+  "Send all": null,
   "Send anonymous usage data": "익명의 사용 데이터 보내기",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "익명의 사용 데이터를 전송하여 Nexus 개발자가 지갑을 개선 할 수있게합니다.",
   "Send from": null,
@@ -426,7 +427,6 @@
   "Type": "유형",
   "Unknown": null,
   "Unknown login status": null,
-  "Unlock until date/time must be at least an hour in the future": "향후 날짜 / 시간이 적어도 한 시간 이상이어야 할 때까지 잠금 해제",
   "Unsupported file type": null,
   "Update available! Downloading...": null,
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": null,
@@ -441,6 +441,7 @@
   "View private key for address": "주소의 비공개 키보기",
   "Visit repository": null,
   "Volume": "음량",
+  "Waiting for average age of balance to exceed 72 hours...": null,
   "Wallet backed up": "월렛 백업 됨",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "월렛이 암호화되었습니다.",
@@ -448,6 +449,7 @@
   "Wallet is not staking": null,
   "Wallet is staking": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
+  "Warning": null,
   "Yes": "예",
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
