--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -124,7 +124,6 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
-  "Don't show this again": null,
   "Download": "Pobierz",
   "Download Recent Database": null,
   "Download recent database?": null,
@@ -181,6 +180,8 @@
   "Hash Difficulty": "Trudnosć Hash",
   "Help": null,
   "High": "Najwyższa",
+  "I have read and Accept the Agreement": null,
+  "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "Adres IP ",
   "IP address configured for manual Core.": "Adres IP  skonfigurowany dla  manual daemon.",
@@ -189,7 +190,6 @@
   "Import": "Importuj",
   "Import custom theme": "Importuj niestandardowy motyw",
   "Import private key": "Importuj Klucz Prywatny",
-  "Incorrect password": "Nieprawidłowe hasło",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
@@ -207,6 +207,7 @@
   "Label (optional)": "Opis (opcjonalnie)",
   "Language": "Język",
   "Last updated\n%{time}": null,
+  "License Agreement": null,
   "Light": "Jasny",
   "Local Time": "Czas lokalny",
   "Log in now": "Zaloguj sie teraz",
@@ -282,7 +283,6 @@
   "Not logged in": "Nie jesteś zalogowany",
   "Not provided": null,
   "Notes": "Notatki",
-  "OK": null,
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": "Tylko moduły które mają aktualne open source repozytoria są dopuszczane do instalacji.Możesz wyłączyć tą opcję w celu przetestowania modułów które sam tworzysz",
   "Open": "Otwórz",
   "Orphan": null,
@@ -362,6 +362,7 @@
   "Send": "Wyslij",
   "Send NXS": "Wyślij NXS",
   "Send To multiple recipients": "Wyślij do kilku odbiorców",
+  "Send all": null,
   "Send anonymous usage data": "Wyślij anonimowe dane dotyczące użytkownika",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Wyślij anonimowe dane użytkownika w celu umożliwienia developerom Nexusa usprawniena  portfela .",
   "Send from": "Wyslij z adresu",
@@ -426,7 +427,6 @@
   "Type": "Rodzaj",
   "Unknown": "Nieznane",
   "Unknown login status": null,
-  "Unlock until date/time must be at least an hour in the future": "Odblokuj do  data/czas musi być zachowany godzinny zapas",
   "Unsupported file type": null,
   "Update available! Downloading...": null,
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": "Użyty do skorygowania transakcji/balansu usterki, Skanowanie każdego bloku w bazie danych. Operacja może potrwać do 10 minut.",
@@ -441,6 +441,7 @@
   "View private key for address": "Zobacz klucz prywatny odnoszący się do adresu",
   "Visit repository": null,
   "Volume": "Obrót",
+  "Waiting for average age of balance to exceed 72 hours...": null,
   "Wallet backed up": "Wykonano kopię zapasową",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "Portfel został zaszyfrowany.",
@@ -448,6 +449,7 @@
   "Wallet is not staking": null,
   "Wallet is staking": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
+  "Warning": null,
   "Yes": "Tak",
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
