--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -124,7 +124,6 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": "Exibir transações de teste na página Transações",
   "Display name": null,
-  "Don't show this again": null,
   "Download": "Descarregar",
   "Download Recent Database": null,
   "Download recent database?": null,
@@ -181,6 +180,8 @@
   "Hash Difficulty": "Dificuldade Hash",
   "Help": null,
   "High": "Alto",
+  "I have read and Accept the Agreement": null,
+  "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "Endereço IP",
   "IP address configured for manual Core.": "Endereço IP configurado para o daemon manual",
@@ -189,7 +190,6 @@
   "Import": "Importar",
   "Import custom theme": "Importar tema personalizado",
   "Import private key": "Importar chave privada",
-  "Incorrect password": "Senha incorreta",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
@@ -207,6 +207,7 @@
   "Label (optional)": "Label (opcional)",
   "Language": "Idioma",
   "Last updated\n%{time}": null,
+  "License Agreement": null,
   "Light": "Claro",
   "Local Time": "Hora Local",
   "Log in now": "Conetar agora",
@@ -282,7 +283,6 @@
   "Not logged in": "Não logado",
   "Not provided": null,
   "Notes": "Notas",
-  "OK": null,
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": "Somente os módulos que possuem repositórios de código aberto válidos podem ser instalados e executados. Você pode desativar essa opção para testar a execução dos módulos que você está desenvolvendo",
   "Open": "Aberto",
   "Orphan": "Órfão",
@@ -362,6 +362,7 @@
   "Send": "Enviar",
   "Send NXS": "Enviar NXS",
   "Send To multiple recipients": "Enviar para vários destinatários",
+  "Send all": null,
   "Send anonymous usage data": "Enviar dados de uso anônimos",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Envie dados de uso anônimos para permitir que os desenvolvedores do Nexus aprimorem a carteira.",
   "Send from": "Enviar de",
@@ -426,7 +427,6 @@
   "Type": "Escreva",
   "Unknown": "Desconhecido",
   "Unknown login status": null,
-  "Unlock until date/time must be at least an hour in the future": "Desbloquear até a data / hora deve ser pelo menos uma hora no futuro",
   "Unsupported file type": null,
   "Update available! Downloading...": null,
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": "Usado para corrigir problemas de transação / balanceamento, analisa cada bloco no banco de dados. Pode demorar até 10 minutos.",
@@ -441,6 +441,7 @@
   "View private key for address": "Ver chave privada para endereço",
   "Visit repository": null,
   "Volume": "Volume",
+  "Waiting for average age of balance to exceed 72 hours...": null,
   "Wallet backed up": "Cópia de segurança da carteira",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "A carteira foi criptografada",
@@ -448,6 +449,7 @@
   "Wallet is not staking": null,
   "Wallet is staking": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
+  "Warning": null,
   "Yes": "Sim",
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
