--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -124,7 +124,6 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
-  "Don't show this again": null,
   "Download": "Download",
   "Download Recent Database": null,
   "Download recent database?": null,
@@ -181,6 +180,8 @@
   "Hash Difficulty": null,
   "Help": null,
   "High": "высотой",
+  "I have read and Accept the Agreement": null,
+  "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "Айпи адрес",
   "IP address configured for manual Core.": "IP-адрес, настроенный для ручного демона",
@@ -189,7 +190,6 @@
   "Import": null,
   "Import custom theme": null,
   "Import private key": "Импорт частного ключа",
-  "Incorrect password": "Неверный пароль",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
@@ -207,6 +207,7 @@
   "Label (optional)": null,
   "Language": "язык",
   "Last updated\n%{time}": null,
+  "License Agreement": null,
   "Light": null,
   "Local Time": "Местное время",
   "Log in now": null,
@@ -282,7 +283,6 @@
   "Not logged in": "Кошелек заблокирован",
   "Not provided": null,
   "Notes": "Заметки",
-  "OK": null,
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": null,
   "Open": "открыто",
   "Orphan": null,
@@ -362,6 +362,7 @@
   "Send": "послать",
   "Send NXS": "послать NXS",
   "Send To multiple recipients": null,
+  "Send all": null,
   "Send anonymous usage data": "Отправить анонимные данные использования",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Отправлять анонимные данные использования, чтобы разработчики Nexus могли улучшить кошелек",
   "Send from": null,
@@ -426,7 +427,6 @@
   "Type": "Тип",
   "Unknown": null,
   "Unknown login status": null,
-  "Unlock until date/time must be at least an hour in the future": "Разблокировать до тех пор, пока дата / время не будет не менее часа",
   "Unsupported file type": null,
   "Update available! Downloading...": null,
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": null,
@@ -441,6 +441,7 @@
   "View private key for address": "Просмотр закрытого ключа для адреса",
   "Visit repository": null,
   "Volume": "объем",
+  "Waiting for average age of balance to exceed 72 hours...": null,
   "Wallet backed up": "Кошелек с резервными копиями",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "Кошелек зашифрован",
@@ -448,6 +449,7 @@
   "Wallet is not staking": null,
   "Wallet is staking": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
+  "Warning": null,
   "Yes": "да",
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
