--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -124,7 +124,6 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": "Mostrar transacciones de prueba en la página Transacciones",
   "Display name": null,
-  "Don't show this again": null,
   "Download": "Descargar",
   "Download Recent Database": null,
   "Download recent database?": null,
@@ -181,6 +180,8 @@
   "Hash Difficulty": "Dificultad Hash",
   "Help": null,
   "High": "Alto",
+  "I have read and Accept the Agreement": null,
+  "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "dirección IP",
   "IP address configured for manual Core.": "Dirección IP configurada para el demonio manual",
@@ -189,7 +190,6 @@
   "Import": "Importar",
   "Import custom theme": "Importar tema personalizado",
   "Import private key": "Importar clave privada",
-  "Incorrect password": null,
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
@@ -207,6 +207,7 @@
   "Label (optional)": "Label (opcional)",
   "Language": "Idioma",
   "Last updated\n%{time}": null,
+  "License Agreement": null,
   "Light": "Light",
   "Local Time": "Hora local",
   "Log in now": "Inicie sesión ahora",
@@ -282,7 +283,6 @@
   "Not logged in": "No se ha iniciado sesión",
   "Not provided": null,
   "Notes": "Notas",
-  "OK": null,
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": "Solo los módulos que tienen depósitos de código abierto válidos se pueden instalar y ejecutar. Puede desactivar esta opción para probar la ejecución de los módulos que está desarrollando",
   "Open": "Abierto",
   "Orphan": "Huérfano",
@@ -362,6 +362,7 @@
   "Send": "Enviar",
   "Send NXS": "Enviar NXS",
   "Send To multiple recipients": "Enviar a múltiples destinatarios",
+  "Send all": null,
   "Send anonymous usage data": "Enviar datos de uso anónimos",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Envía datos de uso anónimos para permitir que los desarrolladores de Nexus mejoren la billetera",
   "Send from": "Enviar desde",
@@ -426,7 +427,6 @@
   "Type": "Tipo",
   "Unknown": "Desconocido",
   "Unknown login status": null,
-  "Unlock until date/time must be at least an hour in the future": "El desbloqueo hasta la fecha / hora debe ser al menos una hora en el futuro",
   "Unsupported file type": null,
   "Update available! Downloading...": null,
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": "Se utiliza para corregir problemas de transacciones / saldos, escanea cada bloque en la base de datos. Puede llevar hasta 10 minutos",
@@ -441,6 +441,7 @@
   "View private key for address": "Ver la clave privada para la dirección",
   "Visit repository": null,
   "Volume": "Volumen",
+  "Waiting for average age of balance to exceed 72 hours...": null,
   "Wallet backed up": "Copia de seguridad de la cartera",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "La billetera se ha cifrado.",
@@ -448,6 +449,7 @@
   "Wallet is not staking": null,
   "Wallet is staking": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
+  "Warning": null,
   "Yes": "Sí",
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
