--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -124,7 +124,6 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
-  "Don't show this again": null,
   "Download": "Download",
   "Download Recent Database": null,
   "Download recent database?": null,
@@ -181,6 +180,8 @@
   "Hash Difficulty": null,
   "Help": null,
   "High": "Hoog",
+  "I have read and Accept the Agreement": null,
+  "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "IP Adres",
   "IP address configured for manual Core.": "IP adres geconfigureerd voor handmatige daemon",
@@ -189,7 +190,6 @@
   "Import": "Importeer ",
   "Import custom theme": "Selecteer Thema Bestand",
   "Import private key": "Importeer Privésleutel",
-  "Incorrect password": "Foutief Wachtwoord",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
@@ -207,6 +207,7 @@
   "Label (optional)": null,
   "Language": "Taal",
   "Last updated\n%{time}": null,
+  "License Agreement": null,
   "Light": null,
   "Local Time": "Locale Tijd",
   "Log in now": null,
@@ -282,7 +283,6 @@
   "Not logged in": "Niet Aangemeld",
   "Not provided": null,
   "Notes": "Notities",
-  "OK": null,
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": null,
   "Open": "Open",
   "Orphan": null,
@@ -362,6 +362,7 @@
   "Send": "Verzenden",
   "Send NXS": "Zend NXS",
   "Send To multiple recipients": "Verzenden naar meerdere ontvangers",
+  "Send all": null,
   "Send anonymous usage data": "Verzend anonieme gebruiksgegevens",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Verzend anonieme gebruiksgegevens zodat de Nexus ontwikkelaars de portemonnee kunnen verbeteren",
   "Send from": "Verzend Van",
@@ -426,7 +427,6 @@
   "Type": "Type",
   "Unknown": null,
   "Unknown login status": null,
-  "Unlock until date/time must be at least an hour in the future": "Ontgrendel tot datum / tijd moet minstens één uur in de toekomst zijn",
   "Unsupported file type": null,
   "Update available! Downloading...": null,
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": null,
@@ -441,6 +441,7 @@
   "View private key for address": "Bekijk privésleutel voor adres",
   "Visit repository": null,
   "Volume": "Volume",
+  "Waiting for average age of balance to exceed 72 hours...": null,
   "Wallet backed up": "Backup van Portemonnee gelukt",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "Portemonnee werd versleuteld",
@@ -448,6 +449,7 @@
   "Wallet is not staking": null,
   "Wallet is staking": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
+  "Warning": null,
   "Yes": "Ja",
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
