--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -187,6 +187,7 @@
   "IP address configured for manual Core.": "IP Adresse für den manuellen Daemon konfiguriert",
   "Ignore": "Ignorieren",
   "Immature": null,
+  "Immature Balance": null,
   "Import": "Importieren",
   "Import custom theme": "Design auswählen",
   "Import private key": "Private Key importieren",
@@ -373,10 +374,10 @@
   "Settings": "Einstellungen",
   "Source code": null,
   "Stake": null,
-  "Stake Balance": null,
   "Stake Difficulty": null,
   "Stake Rate": "Zinssatz",
   "Stake Weight": "Stake Faktor",
+  "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": null,
   "Stop Nexus Core": null,
   "Stopping Core...": null,
