--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -187,6 +187,7 @@
   "IP address configured for manual Core.": "IP address configured for manual Core.",
   "Ignore": "Ignore",
   "Immature": "Immature",
+  "Immature Balance": "Immature Balance",
   "Import": "Import",
   "Import custom theme": "Import custom theme",
   "Import private key": "Import private key",
@@ -373,10 +374,10 @@
   "Settings": "Settings",
   "Source code": "Source code",
   "Stake": "Stake",
-  "Stake Balance": "Stake Balance",
   "Stake Difficulty": "Stake Difficulty",
   "Stake Rate": "Stake Rate",
   "Stake Weight": "Stake Weight",
+  "Staking and mining rewards that need to get past 120 block-old to become available": "Staking and mining rewards that need to get past 120 block-old to become available",
   "Start Nexus Core": "Start Nexus Core",
   "Stop Nexus Core": "Stop Nexus Core",
   "Stopping Core...": "Stopping Core...",
