--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -187,6 +187,7 @@
   "IP address configured for manual Core.": "Dirección IP configurada para el demonio manual",
   "Ignore": "Ignorar",
   "Immature": null,
+  "Immature Balance": null,
   "Import": "Importar",
   "Import custom theme": "Importar tema personalizado",
   "Import private key": "Importar clave privada",
@@ -373,10 +374,10 @@
   "Settings": "Configuración",
   "Source code": null,
   "Stake": "Estaca",
-  "Stake Balance": "Saldo Stake",
   "Stake Difficulty": "Dificultad Stake",
   "Stake Rate": "Stake Rate",
   "Stake Weight": "Stake Weight",
+  "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": null,
   "Stop Nexus Core": null,
   "Stopping Core...": null,
