--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -187,6 +187,7 @@
   "IP address configured for manual Core.": "Adresse IP configurée pour le daemon manuel",
   "Ignore": "Ignorer",
   "Immature": null,
+  "Immature Balance": null,
   "Import": "Importer",
   "Import custom theme": "Importer thème personnalisé",
   "Import private key": "Importer une clé privée",
@@ -373,10 +374,10 @@
   "Settings": "Réglages",
   "Source code": null,
   "Stake": null,
-  "Stake Balance": null,
   "Stake Difficulty": "Difficulté Stake",
   "Stake Rate": "Stake Reward",
   "Stake Weight": "Stake Weight",
+  "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": null,
   "Stop Nexus Core": null,
   "Stopping Core...": null,
