--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -187,6 +187,7 @@
   "IP address configured for manual Core.": "手動デーモン用に設定されたIPアドレス",
   "Ignore": "無視する",
   "Immature": null,
+  "Immature Balance": null,
   "Import": null,
   "Import custom theme": null,
   "Import private key": "秘密鍵をインポートする",
@@ -373,10 +374,10 @@
   "Settings": "設定",
   "Source code": null,
   "Stake": null,
-  "Stake Balance": null,
   "Stake Difficulty": null,
   "Stake Rate": "金利",
   "Stake Weight": "ステーク重量",
+  "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": null,
   "Stop Nexus Core": null,
   "Stopping Core...": null,
