--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -187,6 +187,7 @@
   "IP address configured for manual Core.": "수동 데몬 용으로 구성된 IP 주소",
   "Ignore": "무시",
   "Immature": null,
+  "Immature Balance": null,
   "Import": null,
   "Import custom theme": null,
   "Import private key": "개인 키 가져 오기",
@@ -373,10 +374,10 @@
   "Settings": "설정",
   "Source code": null,
   "Stake": null,
-  "Stake Balance": null,
   "Stake Difficulty": null,
   "Stake Rate": "이자율",
   "Stake Weight": "스테이크 무게",
+  "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": null,
   "Stop Nexus Core": null,
   "Stopping Core...": null,
