--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -187,6 +187,7 @@
   "IP address configured for manual Core.": "IP adres geconfigureerd voor handmatige daemon",
   "Ignore": "Negeren",
   "Immature": null,
+  "Immature Balance": null,
   "Import": "Importeer ",
   "Import custom theme": "Selecteer Thema Bestand",
   "Import private key": "Importeer Privésleutel",
@@ -373,10 +374,10 @@
   "Settings": "Instellingen",
   "Source code": null,
   "Stake": null,
-  "Stake Balance": null,
   "Stake Difficulty": null,
   "Stake Rate": "Stake beloning",
   "Stake Weight": "Stake Gewicht",
+  "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": null,
   "Stop Nexus Core": null,
   "Stopping Core...": null,
