--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -187,6 +187,7 @@
   "IP address configured for manual Core.": "Adres IP  skonfigurowany dla  manual daemon.",
   "Ignore": "Zignoruj",
   "Immature": "Niedojrzała",
+  "Immature Balance": null,
   "Import": "Importuj",
   "Import custom theme": "Importuj niestandardowy motyw",
   "Import private key": "Importuj Klucz Prywatny",
@@ -373,10 +374,10 @@
   "Settings": "Ustawienia",
   "Source code": null,
   "Stake": "Stawka",
-  "Stake Balance": " Balans Stawki",
   "Stake Difficulty": "Trudność Stawki",
   "Stake Rate": "Nagroda za Stake",
   "Stake Weight": "Waga Stawki",
+  "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": null,
   "Stop Nexus Core": null,
   "Stopping Core...": null,
