--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -187,6 +187,7 @@
   "IP address configured for manual Core.": "Endereço IP configurado para o daemon manual",
   "Ignore": "Ignore",
   "Immature": "Imaturo",
+  "Immature Balance": null,
   "Import": "Importar",
   "Import custom theme": "Importar tema personalizado",
   "Import private key": "Importar chave privada",
@@ -373,10 +374,10 @@
   "Settings": "Configurações",
   "Source code": null,
   "Stake": "Stake",
-  "Stake Balance": "Saldo Stake",
   "Stake Difficulty": "Dificuldade Stake",
   "Stake Rate": "Taxa Stake",
   "Stake Weight": "Stake Weight",
+  "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": null,
   "Stop Nexus Core": null,
   "Stopping Core...": null,
