--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -187,6 +187,7 @@
   "IP address configured for manual Core.": "IP-адрес, настроенный для ручного демона",
   "Ignore": "Игнорировать",
   "Immature": null,
+  "Immature Balance": null,
   "Import": null,
   "Import custom theme": null,
   "Import private key": "Импорт частного ключа",
@@ -373,10 +374,10 @@
   "Settings": "настройки",
   "Source code": null,
   "Stake": null,
-  "Stake Balance": null,
   "Stake Difficulty": null,
   "Stake Rate": "Уровень интереса",
   "Stake Weight": "Вес упаковки",
+  "Staking and mining rewards that need to get past 120 block-old to become available": null,
   "Start Nexus Core": null,
   "Stop Nexus Core": null,
   "Stopping Core...": null,
